# my_big_shoot

./: .gitignore  Cargo.toml  README.md  deny.toml  dev.sh  pyproject.toml
assets/brands/: icon.pxo
docs/: components.md
examples/first/: main.rs
scripts/: gen_idle_animation_cfg.py
src/: lib.rs  main.rs
src/components/: character.rs
src/core/: mod.rs
src/core/components/: character.rs  mod.rs
src/core/exercises/: first.rs  second.rs
src/core/loaders/: animation_loader.rs  mod.rs
src/core/plugins/: animation_control.rs  mod.rs  player.rs  preload_res.rs
src/core/states/: mod.rs
src/exercises/: first.rs
