[tool.poetry]
name = "my_big_shoot_scripts"
version = "0.1.0"
description = ""
authors = ["tsotsi <tsotsi@tsotsi.cn>"]
license = "GPLV3"
packages = [
    {include = "scripts/**/*.py"}
]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

